[project]
name = "cartesiatts"
description = "Node for Cartesia Sonic-3 that calls the `/tts/bytes` endpoint and returns: file_path, bytes, url"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.31.0"]

[project.urls]
Repository = "https://github.com/PauldeLavallaz/ComfyUI-CartesiaTTS"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/PauldeLavallaz/ComfyUI-CartesiaTTS/wiki"
"Bug Tracker" = "https://github.com/PauldeLavallaz/ComfyUI-CartesiaTTS/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-CartesiaTTS"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

